--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body{
 }
 
 .desktop_verison{
-    width: 100%;
+    
 }
 
 
@@ -142,7 +142,7 @@ body{
 }
 
 .face_photo{
-    border: 2px solid #f0f;;
+    
     width: 400px;
     height: 400px;
     border-radius: 50%;
@@ -266,12 +266,23 @@ body{
     background: #333;
 
     border-radius: 10px;
+    object-fit: cover;
+    overflow: hidden;
+
+    border: 2px ridge #0ff;
+}
+
+.face img{
+    width: 300px;
+    height: 200px;
+    border-radius: 10px;
 }
 
 .content_card{
     opacity: 2;
     transition: .5s;
     text-align: center;
+    
 } 
 
 .face_front{
@@ -284,8 +295,8 @@ body{
     transform: translateY(0);
     transition: .2s;
     box-shadow: 
-    0 0 60px whitesmoke,
-    0 0 50px #fff,
+    0 0 60px #f1f1f1,
+    0 0 50px #0ff,
     -10px 0 80px #f0f,
     10px 0 80px #0ff;
 }
@@ -330,4 +341,119 @@ body{
     background: #333;
     color: #f5f5f5;
     box-shadow: inset 0px 0px 10px rgba(0, 0, 0, .5);
+}
+
+/* IMAGENES PROYECTOS */
+
+.box_2{
+    object-fit: contain;
+    
+}
+
+.box_2 img{
+    width: 180px;
+    border-radius: 0;
+}
+
+/* ----------------- CONTACTO FORMULARIO --------*/
+
+
+.contacto_container{
+    background-color: #333;
+
+    height: 900px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.body_contact{
+    width: 500px;
+    height: 800px;
+    background-color: #222;
+
+    border-radius: 20px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    
+}
+
+.input_style{
+    margin: 20px;
+}
+
+.input_style input{
+    width: 400px;
+    height: 70px;
+
+    border-radius: 30px;
+    padding-left: 20px;
+
+    border-color: #0ff;
+    background-color: #333;
+
+    color: #f1f1f1;
+}
+
+.input_message textarea{
+    min-width: 400px;
+    min-height: 300px;
+
+    max-width: 400px;
+    max-height: 300px;
+
+    padding-left: 15px;
+    padding-top: 15px;
+
+    border-radius: 20px;
+    border: 3px ridge #0ff;
+
+    background-color: #333;
+    color: #f1f1f1;
+}
+
+.contact_title{
+    height: 70px;
+}
+
+.contact_title h2{
+    font-size: 2em;
+    color: #0ff;
+    position: relative;
+    bottom: 20px;
+}
+
+.input_submit input{
+    width: 200px;
+    height: 70px;
+
+    border-radius: 20px;
+    border: 2px ridge #0ff;
+
+    color: #f1f1f1;
+    background-color: #333;
+}
+
+.input_submit input:hover{
+    cursor: pointer;
+    transform: scale(1.2);
+    transition: .2s;
+
+}
+
+
+/* ------------------  FOOTER ------------------*/
+
+.footer_container{
+    height: 90px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #f1f1f1;
+
+    text-align: center;
 }
