Agregue scroll animado. traduje por completo la version en ingles y desarrolle la estructura de la version mobile

--- a/style.css
+++ b/style.css
@@ -8,10 +8,9 @@ body{
 
 }
 
-.desktop_verison{
-    
+html{
+    scroll-behavior: smooth;
 }
-
 
 /* -------------------  CABECERA  ----------------- */
 
