--- a/mobile/style_responsive.css
+++ b/mobile/style_responsive.css
@@ -12,8 +12,174 @@ html{
     scroll-behavior: smooth;
 }
 
+.body-mobile{
+    position: relative;
+    top: 90px;
+}
+
 /* ---------------- header mobile --------------*/ 
 
-.header-mobile{
-    border: 2px solid #f0f;
+.header-mobile-container{
+    height: 89px;
+
+    background-color: #333;
+
+    display: grid;
+    grid-template-columns: 80% 20%;
+
+    position: fixed;
+    width: 100%;
+
+    z-index: 3;
+
+    box-shadow: 0px 7px 27px 6px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 0px 7px 27px 6px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 7px 27px 6px rgba(0,0,0,0.75);
 }
+
+.name-title-mobile{
+    text-align: center;
+
+    font-size: 1.5em;
+    overflow: hidden;
+}
+
+.name-title-mobile h3{
+    position: relative;
+    top: -20px;
+    color: #0ff;
+}
+
+.bars-mobile{
+    text-align: center;
+    line-height: 85px;
+    font-size: 2em;
+}
+
+/*--------------------------------------*/
+
+/* ----------- PRESENTACION MOBILE --------------*/
+
+.presentation-img-mobile{
+    width: 100%;
+    height: 60vh;
+
+    
+}
+
+.presentation-img-container-mobile:before{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 60vh;
+    background: linear-gradient(
+        360deg,
+        rgba(0, 0, 0, 1),
+        rgba(255, 255, 255, 0)
+    );
+}
+
+.subtitles-mobile-presentation{
+    position: absolute;
+    top: 338px;
+    left:0px;
+    padding-left: 10px;
+
+    width: 200px;
+    height: 100px;
+
+    font-size: 1.5em;
+    z-index: 2;
+}
+
+.item{
+    position: absolute;
+    animation: roll 5s ease 1s infinite backwards;
+    
+}
+
+.item h3{
+    color: #0ff;
+}
+
+.item:nth-child(1){
+    animation-delay: 2s;
+    opacity: 0;
+}
+
+.item:nth-child(2){
+    animation-delay: 5s;
+    opacity: 0;
+}
+
+@keyframes roll{
+    0%{
+        opacity: 0;
+        transform: translate3d(0, -50%, 0);
+    }
+
+    10%, 25%{
+        opacity: 1;
+        transform: translateZ(0);
+    }
+
+    50%, 100%{
+        opacity: 0;
+        transform: translate3d(0, 50%, 0);
+    }
+}
+
+/*------------------------*/
+
+/* ABOUT ME MOBILE */ 
+
+.about-me-mobile-container{
+    padding: 20px;
+    background-color: #222;
+}
+
+.about-me-mobile-container h2{
+    font-size: 2em;
+    color: #0ff;
+}
+
+.about-me-mobile-container p{
+    text-align: center;
+    font-size: 1.5em;
+}
+
+/*-------------------------*/
+
+/* SKILLS MOBILE */
+
+.skills-mobile-container{
+    background-color: #333;
+}
+
+.skills-mobile-container h2{
+    padding: 20px;
+    font-size: 2em;
+    color: #0ff;
+}
+
+.grid-skills{
+    display: grid;
+    grid-template-columns: auto auto auto;
+    justify-content: space-around;
+    padding: 10px;
+}
+
+.skill-mobile img{
+    width: 80px;
+    height: 80px;
+}
+
+.name-skill{
+    text-align: center;
+    background-color: #222;
+    border-radius: 5px;
+}
+
+/*----------------------------------*/
+
+/* PROJECTS MOBILE */
