--- a/mobile/style_responsive.css
+++ b/mobile/style_responsive.css
@@ -108,7 +108,7 @@ html{
 }
 
 .item:nth-child(2){
-    animation-delay: 5s;
+    animation-delay: 4s;
     opacity: 0;
 }
 
@@ -141,6 +141,7 @@ html{
 .about-me-mobile-container h2{
     font-size: 2em;
     color: #0ff;
+    text-align: center;
 }
 
 .about-me-mobile-container p{
@@ -160,6 +161,7 @@ html{
     padding: 20px;
     font-size: 2em;
     color: #0ff;
+    text-align: center;
 }
 
 .grid-skills{
@@ -183,3 +185,109 @@ html{
 /*----------------------------------*/
 
 /* PROJECTS MOBILE */
+
+.projects-mobile-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.projects-mobile-container h2{
+    color: #0ff;
+}
+
+.box-mobile{
+    height: 200px;
+    width: 300px;
+    border-radius: 20px;
+    margin: 20px;
+    background: #333;
+}
+
+.box-mobile img{
+    height: 200px;
+    width: 300px;
+    border-radius: 20px;
+}
+
+.box-mobile img:active{
+    transform: scale(1.2);
+    transition: .2s;
+}
+
+/*-------------------*/
+
+/* CONTACT FORM MOBILE */
+
+.contact-mobile-container{
+    background-color: #333;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.contact-mobile-container h2{
+    color: #0ff;
+    text-align: center;
+    padding: 10px;
+}
+
+.body-form-mobile{
+    background-color: #222;
+    margin: 20px;
+    width: 300px;
+    height: 550px;
+    display: grid;
+    justify-content: center;
+    grid-template-rows: auto auto auto 35% auto;
+    border-radius: 15px;
+    
+}
+
+.input-mobile{
+    color: #f1f1f1;
+}
+
+.input-mobile input{
+    margin: 15px;
+    padding-left: 10px;
+
+    width: 250px;
+    height: 50px;
+
+    background-color: #333;
+    border-radius: 15px;
+    border: 2px solid #0ff;
+}
+
+.input-mobile textarea{
+    margin: 15px;
+    padding-top: 10px;
+    padding-left: 10px;
+
+    width: 250px;
+    height: 150px;
+
+    background-color: #333;
+    border-radius: 15px;
+    border: 2px solid #0ff;
+    color: #f1f1f1;
+}
+
+.input-submit-mobile{
+    margin: auto;
+}
+
+.input-submit-mobile input{
+    width: 200px;
+    text-align: center;
+}
+
+.input-submit-mobile:active{
+    transform: scale(
+        1.2
+    );
+    transition: .1s;
+}
